<resources>
    <string name="app_name">WalkWith</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_trusted_contacts">Trusted Contacts</string>
    <string name="title_activity_active">Active Walkers</string>
    <string name="title_activity_walk">Start New Walk</string>
    <string name="title_activity_main_menu">Main Menu</string>
    <string name="title_activity_focus">Focus Menu</string>
    <string name="title_activity_register">Sign Up</string>
    <string name="title_activity_walking">Walk Menu</string>
    <string name="server_ip">https://walkwithserver.appspot.com/</string>
    <string name="add_contact_button">Add Trusted Contact</string>
    <string name="remove_contact_button">Remove Trusted Contact</string>
    <string name="focusTimer">5000</string>
    <string name="activeTimer">10000</string>
    <string name="idleTimer">30000</string>
    <string name="rememberMe">Stay Logged In </string>
    <string name="unknown">Unknown</string>
    <string name="forename">Forename</string>
    <string name="surname">Surname</string>
    <string name="email">Email Address</string>
    <string name="phone">Phone Number</string>
    <string name="search">Search…</string>
    <string name="safeWalk">Safer Walk</string>
    <string name="lightWalk">Brighter Walk</string>
    <string name="finishWalk">Finish Walk</string>
    <string name="startWalk">Start Walk</string>
    <string name="back">Back</string>
    <string name="alarm">Alarm</string>
    <string name="torch">Flashlight</string>
    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <string name="title_activity_alarm">Alarm</string>
    <string name="title_activity_login">Sign In</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_account">Create Account</string>
    <string name="forgotten_password">Forgotten Password</string>
    <string name="username">Username</string>
    <string name="friends_online">Friends online: %1$s</string>
    <string name="distanceLeft">Distance Left: %1$s</string>
    <string name="to_login">Already have an account? Login</string>
    <string name="alert">Alert Contacts</string>
    <string name="description">Placeholder Description</string>
    <string name="nightline">You can find the number for Nightline on the reverse of your library
        card, or email on listening@bath.nightline.ac.uk</string>
    <string name="samaritans">Samaritans: 116 123</string>
    <string name="eta">ETA: %1$s</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="deleteAccount">Delete Account</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="change_password">Change Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="editProfile">Edit Profile</string>
    <string name="star">********</string>
    <string name="cancel">Cancel</string>
    <string name="confirmChanges">Confirm Changes</string>
    <string name="newPass">New Password</string>
    <string name="watching">You are watching: %1$s</string>
    <string name="stopFocus">Stop Focus</string>
    <string name="logout">Log Out</string>
    <string name="viewProfile">View Profile</string>
    <string name="changeTheme">Change Theme</string>

</resources>
