<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="LoginActivity">

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/password"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="True"
        android:backgroundTint="#F44336"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/rememberMe"
        android:backgroundTint="#F44336"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:autofillHints="True"
        android:hint="@string/prompt_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login"
        android:layout_width="231dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="#F44336"
        android:enabled="true"
        android:text="@string/title_activity_login"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/createAccount"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/login"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/create_account"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#F44336" />

    <Button
        android:id="@+id/forgotPassword"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/createAccount"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/forgotten_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#F44336" />

    <Switch
        android:id="@+id/rememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="#F44336"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"
        android:layout_above="@id/login"
        android:theme="@style/WWSwitch"
        android:layout_centerHorizontal="true"
        android:text="@string/rememberMe" />

</RelativeLayout>