<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    tools:context=".EditProfileActivity">

    <TextView
        android:id="@+id/firstname"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#F44336"
        android:layout_width="96dp"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:text="@string/forename"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/surname" />

    <EditText
        android:id="@+id/firstnameVal"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#F44336"
        android:layout_width="196dp"
        android:layout_height="0dp"
        android:backgroundTint="#F44336"
        android:hint="@string/unknown"
        android:enabled="false"
        android:gravity="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/surnameVal"
        android:autofillHints="no"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/surname"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#F44336"
        android:layout_width="96dp"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:text="@string/surname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/email"
        app:layout_constraintTop_toBottomOf="@+id/firstnameVal" />

    <EditText
        android:id="@+id/surnameVal"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#F44336"
        android:layout_width="196dp"
        android:layout_height="0dp"
        android:enabled="false"
        android:backgroundTint="#F44336"
        android:hint="@string/unknown"
        android:gravity="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/emailVal"
        android:autofillHints="no"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/email"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#F44336"
        android:layout_width="129dp"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <EditText
        android:id="@+id/emailVal"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#F44336"
        android:layout_width="196dp"
        android:layout_height="40dp"
        android:backgroundTint="#F44336"
        android:hint="@string/unknown"
        android:gravity="end"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="no"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/phoneNum"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#F44336"
        android:layout_width="126dp"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:text="@string/phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailVal" />

    <EditText
        android:id="@+id/phoneNumVal"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#F44336"
        android:layout_width="196dp"
        android:layout_height="40dp"
        android:backgroundTint="#F44336"
        android:hint="@string/unknown"
        android:gravity="end"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailVal"
        android:autofillHints="no"
        android:inputType="phone" />

    <TextView
        android:id="@+id/password"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#F44336"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:text="@string/prompt_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNum" />

    <EditText
        android:id="@+id/passwordVal"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#F44336"
        android:layout_width="196dp"
        android:layout_height="40dp"
        android:backgroundTint="#F44336"
        android:hint="@string/star"
        android:gravity="end"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneNumVal"
        android:autofillHints="no"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/confirmPassword"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#F44336"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:text="@string/confirm_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <EditText
        android:id="@+id/confirmPasswordVal"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#F44336"
        android:layout_width="196dp"
        android:layout_height="40dp"
        android:backgroundTint="#F44336"
        android:hint="@string/star"
        android:gravity="end"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordVal"
        android:autofillHints="no"
        android:inputType="textPassword" />


    <Button
        android:id="@+id/editProfile"
        android:background="#F44336"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#FFFFFF"
        android:padding="10dp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/editProfile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/deleteAccount"
        android:background="#F44336"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#FFFFFF"
        android:padding="10dp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/deleteAccount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/cancel"
        android:background="#F44336"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#FFFFFF"
        android:padding="10dp"
        android:layout_width="150dp"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/confirmChanges"
        android:background="#F44336"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#FFFFFF"
        android:padding="10dp"
        android:layout_width="150dp"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/confirmChanges"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>