<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.RegisterActivity">

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="293dp"
        android:backgroundTint="#F44336"
        android:ems="10"
        android:autofillHints="True"
        android:hint="@string/prompt_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="97dp"
        android:layout_marginTop="302dp"
        android:backgroundTint="#F44336"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:autofillHints="True"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="243dp"
        android:backgroundTint="#F44336"
        android:ems="10"
        android:hint="@string/username"
        android:autofillHints="True"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/register"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="226dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="234dp"
        android:background="#F44336"
        android:text="@string/create_account"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/gotAccount"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="374dp"
        android:layout_height="51dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="167dp"
        android:text="@string/to_login"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#F44336" />
</RelativeLayout>