<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="RegisterActivity">

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="97dp"
        android:layout_marginTop="200dp"
        android:autofillHints="True"
        android:backgroundTint="#F44336"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="97dp"
        android:layout_marginTop="250dp"
        android:backgroundTint="#F44336"
        android:ems="10"
        android:autofillHints="True"
        android:hint="@string/prompt_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/change_password"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="226dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="97dp"
        android:layout_marginTop="320dp"
        android:background="#F44336"
        android:text="@string/change_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#FFFFFF" />


</RelativeLayout>